tests/compiler/parserPrivateIdentifierInArrayAssignment/index.ts
// From `github.com/microsoft/TypeScript/blob/v6.0.3/tests/cases/compiler/parserPrivateIdentifierInArrayAssignment.ts`, Apache-2.0 License

//@compiler-options: target=es6
[#abc]= //~ERROR: Expression expected.